deployment/azure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-costmodel
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "kv-cert-unitst"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: io-costmodel-dev.unitst.org
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: proxy-public
            port:
              number: 80
